--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,8 @@ add_executable(porjet_badland main.c
         menu.c
         menu.h
         jeu.c
-        jeu.h)
+        jeu.h
+        ditactitielle.c
+        ditactitielle.h
+)
 target_link_libraries(porjet_badland -lmingw32 -lalleg44)
