--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 MinGW
+cmake-build-debug/.cmake
+cmake-build-debug/CMakeFiles
+cmake-build-debug/Testing
+cmake-build-debug/build.ninja
+cmake-build-debug/cmake_install.cmake
+cmake-build-debug/CMakeCache.txt
+cmake-build-debug/.ninja_deps
+cmake-build-debug/.ninja_log
+cmake-build-debug/projet_ing1_allegro_2025_ing1_allegro_2025_2_1.exe
+.idea
